<resources>
    <string name="app_name">DreamTunes</string>
    <string name="play_to_start">Click play to Start</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember">Remember me</string>
    <string name="dont_have_acccount">"Don't have an account ?"</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_up_fb">Or sign up with facebook</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="random">Play random</string>


    <!--    Validators-->

    <string name="name_required">Name is required</string>
    <string name="surname_required">Surname is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>

    <string name="wrong_format">Wrong format</string>
    <string name="email_exists">Email has already exists</string>
    <string name="password_too_short">Password too short</string>

    <string name="wrong_password">Password is wrong</string>
    <string name="wrong_email">Email is wrong</string>

    <string name="fill_all_form">"Fill all form correctly"</string>

    <!--    Facebook strings-->
    <string name="facebook_app_id">1388750627951968</string>
    <string name="fb_login_protocol_scheme">fb1388750627951968</string>

</resources>
