<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/image_top_title"
        android:layout_width="317dp"
        android:layout_height="74dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_title"
        tools:layout_editor_absoluteX="47dp" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAppearance="@style/input_text"
        android:textColor="@color/colorMain"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_top_title" />

    <EditText
        android:id="@+id/input_surname"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/surname"
        android:textColor="@color/colorMain"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorMain"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_surname" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorMain"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        tools:layout_editor_absoluteX="134dp" />

    <TextView
        android:id="@+id/or_sign_up_fb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/sign_up_fb"
        android:textColor="@color/colorMain"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <Button
        android:id="@+id/sign_up_with_fb_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="186dp"
        android:background="@drawable/ic_facebook_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_up_fb_text" />

    <TextView
        android:id="@+id/have_an_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="146dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/have_an_account"
        android:textColor="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_with_fb_btn" />

    <Button
        android:id="@+id/sign_in_link"
        android:layout_width="202dp"
        android:layout_height="17dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/ic_sign_in_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_an_account_text" />

</androidx.constraintlayout.widget.ConstraintLayout>