<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/title_start"
        android:layout_width="317dp"
        android:layout_height="74dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_title" />


    <EditText
        android:id="@+id/email_sign_in_input"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"

        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/input_text"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_in_input"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="323dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="217dp"
        android:buttonTint="@color/colorMain"
        android:fontFamily="@font/open_sans"
        android:text="@string/remember"
        android:textColor="@color/colorMain"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in_input" />

    <EditText
        android:id="@+id/password_sign_in_input"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAppearance="@style/input_text"
        android:textColorHint="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_start"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="323dp" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="135dp"
        android:background="@drawable/ic_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/dont_have_acccount"
        android:textColor="@color/colorMain"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <Button
        android:id="@+id/button3"
        android:layout_width="202dp"
        android:layout_height="18dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/ic_sign_up_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>